--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.0.3",
     "emailjs": "^4.0.3",
+    "motion": "^12.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-scroll": "^1.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
